# whisper-openai-server

./: AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  run.sh
.github/workflows/: ci.yml  release.yml
src/: api.rs  audio.rs  config.rs  error.rs  formats.rs  main.rs  model_store.rs
src/backend/: mod.rs  whisper_rs.rs
