[package]
name = "whisper-openai-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["aac", "alac", "flac", "isomp4", "mkv", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2"
tokio = { version = "1.43", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
whisper-rs = { version = "0.15.1", default-features = false, features = ["metal"] }

[dev-dependencies]
tower = "0.5"
