[package]
name = "whisper-openai-server"
version = "0.1.2"
edition = "2021"
description = "OpenAI-compatible Whisper transcription/translation API server"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bradsjm/whisper-openai-server"
homepage = "https://github.com/bradsjm/whisper-openai-server"
rust-version = "1.70"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4", features = ["derive", "env"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["aac", "alac", "flac", "isomp4", "mkv", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.43", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
whisper-rs = { version = "0.15.1", default-features = false, features = ["metal"] }

[features]
default = ["metal"]
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]

[dev-dependencies]
tower = "0.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
